1.4 alpha 1
===========
(Scott Yeadon)
- Add support for branded preview image
  SF Patches: #1330829, #1430437

(Navalkishore Sarda, Scott Yeadon)
- Add/replace Creative Commons in 'edit item' tool (SF patch #1172755)

(Richard Jones)
- Customisable item listing columns and browse indices (SF patch #1324631)

(Scott Yeadon)
- Script for updating handle prefixes (e.g. for moving from development to production)
- Configurable boolean search operator

(Miguel Ferreira)
- Controlled vocabulary patch to provide search on classification terms, and
  addition of terms during submission.
  SF Patch: #1244559

(Richard Jones) 
- Add 'visibility' element to input-forms.xml
  SF Patch #1368160

(Martin Hald)
- Log4J enhancement to use XML configuration
  SF Patch #1224389
  
(Dorothea Salo)
- Prevent ClassCastException for withdrawn items
  Fixes SF Bug #1333678
  SF Patch #1353368
  
(Larry Stone)
- Fix for extraneous '/' browse links
  SF Patch #1393365
  
(Aneesh Joy)
- Browse by subject feature; SF Patch #1193600

(Andrea Bollini)
- QueryArgs class can support any number of fields in advanced search.
  (Existing advanced-search.jsp not changed)
  SF Patch #1363809

(Scott Yeadon)
- Now uses Jakarta Commons FileUpload instead of com.oreilly.servlet.
  Patch SF #1380118.

(Robert Tansley)
- Drop unique community name constraint.  Also fixes SF bug #1284055.

(Robert Tansley)
- Scripts for Windows support

(WeiHua HUANG)
- Support for SMTP server username/password authentication

(Robert Tansley)
- Bitstream file sizes now stored in BIGINT column size_bytes.
  Fixes SF bug #1035366
- Queries involving booleans now have Oracle/PostgreSQL-neutral SQL syntax;
  removes some DB-dependent code from business logic layer

(Martin Hald, Larry Stone, Robert Tansley)
- Support for multiple (flat) metadata schemas

(Robert Tansley)
- Fix XHTML for front page when no communities present

(Dorothea Salo)
- SF Patch #1351620 Add "Submit an item" button to Submission Complete page
